--- a/public/templates/container/index.html
+++ b/public/templates/container/index.html
@@ -7,6 +7,9 @@
       <li>
         <a href="javascript:void(0)" ui-sref="container.profile" ui-sref-active="active">Profile</a>
       </li>
+      <li>
+        <a href="javascript:void(0)" ui-sref="container.tasks" ui-sref-active="active">Tasks</a>
+      </li>
     </ul>
   </div>
   <div class="content-container" ui-view="child-content"></div>
