--- a/public/templates/container/index.html
+++ b/public/templates/container/index.html
@@ -10,6 +10,9 @@
       <li>
         <a href="javascript:void(0)" ui-sref="container.tasks" ui-sref-active="active">Tasks</a>
       </li>
+      <li>
+        <a href="javascript:void(0)" ui-sref="container.mike" ui-sref="active">Mike</a>
+      </li>
     </ul>
   </div>
   <div class="content-container" ui-view="child-content"></div>
