--- a/public/templates/container/index.html
+++ b/public/templates/container/index.html
@@ -16,6 +16,9 @@
       <li>
         <a href="javascript:void(0)" ui-sref="container.users" ui-sref-active="active">Users</a>
       </li>
+      <li>
+        <a href="javascript:void(0)" ui-sref="container.mikeExam" ui-sref-active="active">Mike Exam</a>
+      </li>
     </ul>
   </div>
   <div class="content-container" ui-view="child-content"></div>
