--- a/public/templates/container/style.css
+++ b/public/templates/container/style.css
@@ -1,9 +1,11 @@
+
 .header-container{
   display: flex;
   align-items: center;
   background-color: #3192CF;
   height: 50px;
   padding: 0 40px;
+  position: relative;
 }
 .header-container ul{
   padding: 0;
@@ -32,7 +34,50 @@
 .header-container ul li a.active{
   border-bottom: 4px solid #fff;
 }
-
 .content-container{
   padding: 20px 50px;
 }
+.user{
+  position: absolute;
+  right: 32px;
+  top: -4px;
+}
+.user button{
+  background-color: transparent !important;
+  display: inline-flex;
+  align-items: center;
+  padding: 8px !important;
+  position: relative;
+}
+.user img{
+  width: 45px;
+  height: 40px;
+}
+.user span i{
+ font-weight: bolder;
+}
+.user ul{
+  background-color: #f7f7f7;
+  padding: 10px 25px 10px 15px;
+  margin: 0;
+  position: absolute;
+  right: -20px;
+  border-radius: 3px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  width: 160px;
+ }
+ li{
+  list-style-type: none;
+  padding: 8px 5px;
+  font-weight: 500;
+}
+a{
+  color: #9caab9;
+  text-decoration: none;
+}
+a:hover{
+  color: #3192cf;
+}
+.user ul i{
+  color: #3192cf;
+ }
