--- a/public/templates/container/index.html
+++ b/public/templates/container/index.html
@@ -17,9 +17,6 @@
         <a href="javascript:void(0)" ui-sref="container.users" ui-sref-active="active">Users</a>
       </li>
       <li>
-        <a href="javascript:void(0)" ui-sref="container.mikeExam" ui-sref-active="active">Mike Exam</a>
-      </li>
-      <li>
         <a href="javascript:void(0)" ui-sref="container.transactions" ui-sref-active="active">Transactions</a>
       </li>
     </ul>
@@ -36,7 +33,9 @@
            <li>
             <a href="javascript:void(0)" ui-sref="container.mikeExam" ui-sref-active="active"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;Mike Exam</a>
           </li>
-           <li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp;&nbsp;Manage Account</a></li>
+           <li>
+            <a href="javascript:void(0)" ui-sref="container.myTransaction" ui-sref-active="active"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp;&nbsp;My Transaction</a>
+           </li>
            <li><a href="#"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;&nbsp;Logout</a></li>
         </ul>
     </div>
