--- a/public/templates/myTransaction/index.html
+++ b/public/templates/myTransaction/index.html
@@ -34,16 +34,17 @@
                 <input type="checkbox">
               </td> -->
               <td >MED000<span ng-bind="list.id"></span></td>
-              <td ng-bind="list.name"></td>
+              <td ng-bind="list.name | uppercase"></td>
               <td ng-bind="list.service"></td>
               <td ng-bind="formatMomentDate(list.payment_due, ['DD/MM/YYYY', 'YYYY-MM-DD'], 'DD/MM/YYYY')"></td>
+              <!-- <td ng-bind="list.payment_due"></td> -->
               <td>
-                <span>SGD</span>
-                <span ng-bind="list.payment_amount_due"></span>
+                <!-- <span>SGD</span> -->
+                <span ng-bind="list.payment_amount_due | number:2"></span>
               </td>
               <td >
-                <span>SGD</span>
-                <span ng-bind="list.payment_amount"></span>
+                <!-- <span>SGD</span> -->
+                <span ng-bind="list.payment_amount | number:2 "></span>
               </td>
               <td>
                 <div class="paid" ng-if="list.paid == true">PAID</div>
@@ -60,7 +61,7 @@
                   <div class="action-drop"  x-show="open" @click.away="open = false" @click="open = false">
                     <div class="action-div" ng-click="updateTransaction(list)">Update Transaction</div>
                     <div class="action-div" ng-click="deleteTransaction(list)">Delete Transaction</div>
-                    <div class="action-div" ng-click="modalForm(list)">Record Payment</div>
+                    <div class="action-div" ng-click="modalForm(list)" ng-if="list.paid == false">Record Payment</div>
                     <div class="action-div" ng-if="list.paid == true" ng-click="removePayment(list)">Remove Payment</div>
                   </div>
                 </div>
@@ -120,7 +121,7 @@
         <input type="text" class="datepicker" ng-model="payment.payment_date"><br>
         <label for="">Payment Amount</label><br>
         <input type="text" ng-model="payment.payment_amount">
-        <button class="btn" ng-click="addPayment(payment)">Add Payment Details</button>
+        <button class="btn" ng-click="addPayment(payment)"><i class="fa fa-plus"></i>&nbsp;Add Payment</button>
       </form>
     </div>
   </div>
